  This caused EmuDesk to randomly and silently stop when copying a folder. (VRI)
- bdos/fs.h bdos/fsio.c bdos/fsopnclo.c: Fixed creating a read-only file and
  copying a read-only file with EmuDesk. Contributed by Roger Burrows. (VRI)

2011-11-08
- doc/announce.txt: Updated the release date. (VRI)

* Release: 0.8.6

2011-11-10
- aes/gemgsxif.c: Fixed calculation of size of menu/alert screen buffer, and
  added/updated comments. (RFB)
- cli/command.c desk/desk1.c desk/deskapp.h desk/deskmain.c desk/desksupp.c
  include/config.h: Replaced "magic numbers" for sizes of filename/pathname/etc
  with centralised #defines. (RFB)

2011-11-11
- aes/gem_rsc.c aes/gem_rsc.h aes/gemctrl.c aes/gemctrl.h aes/gemevlib.c
  aes/gemevlib.h aes/gemfmalt.c aes/gemfmalt.h aes/gemfslib.c aes/gemfslib.h
  aes/gemmnlib.c aes/gemmnlib.h aes/gemsclib.c aes/gemwmlib.c aes/gemwmlib.h
  bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c bios/disk.c bios/fnt_st_8x8.c
  bios/screen.c bios/vt52.c cli/command.c desk/desk_rsc.c desk/deskmain.c
  desk/deskobj.c include/compat.h include/version.h tools/version.sed: Added
  the const attribute to constant arrays so they moved to the TEXT segment. The
  DATA segment (which is still incorrectly read-only) is now empty. (VRI)
- desk/desksupp.c: Fixed desktop crash when opening a folder that has a
  pathname exactly (LEN_ZPATH-LEN_ZFNAME) bytes long. (RFB)
- desk/deskfpd.c desk/desksupp.c: Fixed incorrect pathname length check
  that caused some valid pathnames to be disallowed. (RFB)
- aes/gemfslib.c bdos/fsdir.c: Replaced more occurrences of "magic numbers"
  for maximum pathname length with centralised #defines. (RFB)

2011-11-12
- Makefile bios/bios.c bios/startup.S include/config.h: New target "make cart"
  to build a diagnostic cartridge into etoscart.img. (VRI)
- bios/bios.c bios/startup.S: Renamed cartscan() to run_cartridge_applications()
  and improved application cartridge comments. (VRI)